--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-devtools-extension": "^2.13.9",
