--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3",
     "react-step-progress-bar": "^1.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
