--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
     "react-step-progress-bar": "^1.0.3",
+    "react-tooltip": "^5.28.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
