--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
+    "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
