--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.8.3",
     "react-step-progress-bar": "^1.0.3",
     "react-tooltip": "^5.28.0",
+    "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
