--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
+    "react-progressbar-semicircle": "^1.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
@@ -34,6 +35,7 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.15",
     "yup": "^1.4.0"
   },
   "devDependencies": {
