--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.15",
+    "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
