--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.2.0",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.1",
