--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-semicircle": "^1.2.1",
     "react-redux": "^9.1.2",
