--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-semicircle": "^1.2.1",
