--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
     "react-google-login": "^5.2.2",
