--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.11",
     "gapi-script": "^1.2.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
@@ -30,11 +32,13 @@
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-progressbar-semicircle": "^1.2.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
     "react-step-progress-bar": "^1.0.3",
     "react-to-print": "^3.0.2",
+    "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
